# model-class

./: .gitignore  README.md  pyproject.toml
model_class/: __init__.py
tests/: test_model_class.py
