[tool.poetry]
name = "model-class"
version = "0.1.0"
description = "Decorators for property-based model classes"
authors = ["Julian Heise <jam.heise@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juheise/model-class/"
repository = "https://github.com/juheise/model-class/"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
